--- a/app/src/main/res/layout/activity_doi_pass.xml
+++ b/app/src/main/res/layout/activity_doi_pass.xml
@@ -86,13 +86,9 @@
             android:layout_marginHorizontal="80dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/bg_btn"
-            android:fontFamily="@font/be_vietnam_bold"
+            style="@style/Text_btn"
             android:gravity="center"
             android:text="@string/l_u"
-            android:textColor="@color/white"
-
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline13"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
