--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -41,12 +41,14 @@
 
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -266,22 +268,22 @@
 
             <TextView
                 android:id="@+id/textView58"
+                style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                style="@style/Text"
-                android:textSize="16sp"
                 android:text="Bạn cần thêm gì không ?"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView34" />
 
             <TextView
                 android:id="@+id/textView59"
+                style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chọn thêm món khác ở đâu"
-                style="@style/Text"
                 android:textColor="#787272"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/textView58"
@@ -292,8 +294,8 @@
                 android:id="@+id/imageView32"
                 android:layout_width="wrap_content"
                 android:layout_height="1dp"
-                android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView31"
@@ -345,17 +347,17 @@
 
             <EditText
                 android:id="@+id/editTextTextPersonName"
+                style="@style/Text"
                 android:layout_width="0dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="25dp"
                 android:background="@drawable/bg_edit_text"
+                android:hint="Bạn có gì muốn nhắn tới nhà hàng không ?"
                 android:inputType="textPersonName"
                 android:paddingLeft="15dp"
                 android:textSize="13sp"
-                android:hint="Bạn có gì muốn nhắn tới nhà hàng không ?"
-                style="@style/Text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView37"
                 app:layout_constraintTop_toBottomOf="@+id/imageView35" />
@@ -372,5 +374,57 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="75dp"
+        android:background="#E9E9E9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/textView7"
+            style="@style/Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:text="Tổng cộng"
+            android:textColor="#5F5656"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView166666"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
+            android:text="130.000 đ"
+            style="@style/Text"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@+id/textView87"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView87"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="50dp"
+            android:background="@drawable/bg_btn"
+            android:fontFamily="@font/be_vietnam_bold"
+            android:gravity="center"
+            android:text="Thanh Toán"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView7"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
