--- a/app/src/main/res/drawable/ic_logout.xml
+++ b/app/src/main/res/drawable/ic_logout.xml
@@ -11,14 +11,14 @@
         android:strokeLineJoin="round"
         android:strokeWidth="1.5"
         android:fillColor="#00000000"
-        android:strokeColor="#232222"
+        android:strokeColor="#FFFFFF"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M20,12H7L10,9M10,15L7,12"
         android:strokeLineJoin="round"
         android:strokeWidth="1.5"
         android:fillColor="#00000000"
-        android:strokeColor="#232222"
+        android:strokeColor="#FFFFFF"
         android:strokeLineCap="round"/>
   </group>
 </vector>
