--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -56,15 +56,14 @@
 
     <TextView
         android:id="@+id/tv_add_Address"
-        android:layout_width="325dp"
-        android:layout_height="55dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="45dp"
+        android:layout_marginHorizontal="45dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:text="Lưu Địa Chỉ"
-        android:textColor="#F5F5F5"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
