--- a/app/src/main/res/layout/activity_change_pass2.xml
+++ b/app/src/main/res/layout/activity_change_pass2.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/ivBackpas"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="25dp"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        android:onClick="Back"-->
-<!--        android:src="@drawable/ic_back"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:ignore="OnClick" />-->
 
 
     <ImageView
@@ -90,17 +79,14 @@
     <Button
         android:id="@+id/btnLuu"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/bg_btn"
-        android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
         android:onClick="onCLickChangepass"
         android:text="@string/l_u"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
