--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -68,15 +68,12 @@
     <Button
         android:id="@+id/btnContinue"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/bg_btn"
-        android:fontFamily="@font/be_vietnam_bold"
+        style="@style/Text_btn"
         android:text="Tiếp Tục"
-        android:textColor="#EFEEEE"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCheckOTP" />
