--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -176,15 +176,13 @@
     <TextView
         android:id="@+id/tvsave"
         android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="45dp"
         android:layout_marginTop="22dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:text="@string/l_u"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
