--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,16 +103,14 @@
     <TextView
         android:id="@+id/tvDangNhap"
         android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="35dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:onClick="onClickLogin"
         android:text="@string/ng_nh_p"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
