--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -111,17 +111,14 @@
     <Button
         android:id="@+id/tvLoginDangNhap"
         android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="35dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/bg_btn"
-        android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
         android:onClick="loginDangNhap"
         android:text="@string/ng_nh_p"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
