--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -125,16 +125,13 @@
         android:id="@+id/tvDangKy"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="35dp"
         android:layout_marginTop="45dp"
         android:background="@drawable/bg_btn"
-        android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
         android:onClick="onClickRegister"
         android:text="@string/ng_k"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/Text_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtRePassWordDangKy" />
