--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/favorite"
-        android:icon="@drawable/favorite_item"
+        android:icon="@drawable/heart_item"
         android:title="@string/favorite"/>
 
     <item
