--- a/app/src/main/res/layout/activity_hello_screen.xml
+++ b/app/src/main/res/layout/activity_hello_screen.xml
@@ -16,4 +16,11 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"
         app:srcCompat="@drawable/imghelloscreen" />
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/prgLoadingSplash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:SpinKit_Color="@color/colorTaskBar" />
 </LinearLayout>
