--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,17 @@
     android:orientation="vertical"
     tools:context=".Activity.LoginActivity">
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/prgLoadingLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/colorTaskBar"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <ImageView
         android:id="@+id/ivBackpaa"
         android:layout_width="wrap_content"
@@ -102,6 +113,7 @@
 
     <TextView
         android:id="@+id/tvDangNhap"
+        style="@style/Text_btn"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
@@ -110,7 +122,6 @@
         android:gravity="center"
         android:onClick="onClickLogin"
         android:text="@string/ng_nh_p"
-        style="@style/Text_btn"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,6 +155,18 @@
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/tvKhongTK"
         app:layout_constraintTop_toBottomOf="@+id/tvDangNhap" />
+
+    <TextView
+        android:id="@+id/tvResultLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorTaskBar"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prgLoadingLogin"/>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
