--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,17 +8,6 @@
     android:orientation="vertical"
     tools:context=".Activity.LoginActivity">
 
-    <com.github.ybq.android.spinkit.SpinKitView
-        android:id="@+id/prgLoadingLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:SpinKit_Color="@color/colorTaskBar"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
     <ImageView
         android:id="@+id/ivBackpaa"
         android:layout_width="wrap_content"
@@ -68,6 +57,7 @@
         android:background="@drawable/bg_edit_text"
         android:drawableStart="@drawable/ic_mess"
         android:drawablePadding="12dp"
+        android:paddingEnd="10dp"
         style="@style/Text"
         android:hint="@string/nh_p_email"
         android:paddingStart="16dp"
@@ -75,25 +65,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtPassWordDangNhap"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        app:passwordToggleEnabled="true"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
-        android:background="@drawable/bg_edit_text"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="12dp"
-        style="@style/Text"
-        android:hint="@string/nh_p_password"
-        android:paddingStart="16dp"
-        app:passwordToggleEnabled="true"
-        android:inputType="textPassword"
+        app:hintEnabled="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtEmailDangNhap"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0">
+
+        <EditText
+            android:id="@+id/editPasswordDangNhap"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_edit_text"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="12dp"
+            style="@style/Text"
+            android:hint="@string/nh_p_password"
+            android:paddingEnd="40dp"
+            android:paddingStart="16dp"
+            app:passwordToggleEnabled="true"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <TextView
@@ -120,7 +119,6 @@
         android:layout_marginTop="100dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
-        android:onClick="onClickLogin"
         android:text="@string/ng_nh_p"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,18 +153,6 @@
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/tvKhongTK"
         app:layout_constraintTop_toBottomOf="@+id/tvDangNhap" />
-
-    <TextView
-        android:id="@+id/tvResultLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorTaskBar"
-        android:textStyle="bold"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/prgLoadingLogin"/>
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
