--- a/app/src/main/res/layout/activity_change_pass2.xml
+++ b/app/src/main/res/layout/activity_change_pass2.xml
@@ -5,95 +5,138 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
-
-
-
     <ImageView
-        android:id="@+id/ivLogo"
-        android:layout_width="128dp"
-        android:layout_height="89dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/imghelloscreen"
+        android:id="@+id/img_back_Changei"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:src="@drawable/ic_back"
+        app:layout_constraintBottom_toBottomOf="@+id/textView26"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView26"
+        app:layout_constraintVertical_bias="0.529" />
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="25dp"
+        android:text="@string/doi_pass"
+        android:textColor="#000000"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        app:srcCompat="@drawable/ic_vienduoi" />
 
-    <EditText
-        android:id="@+id/edtPass"
-        style="@style/Text"
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="108dp"
-        android:background="@drawable/bg_edit_text"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="12dp"
-        android:hint="Nhập mật khẩu"
-        android:inputType="textPassword"
-        android:paddingStart="16dp"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView17"
+        app:passwordToggleEnabled="true">
 
-    <EditText
-        android:id="@+id/edtPassChange"
+        <EditText
+            android:id="@+id/edtPass"
+            style="@style/Text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_edit_text"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="12dp"
+            android:hint="Nhập mật khẩu cũ"
+            android:inputType="textPassword"
+            android:paddingStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout8"
+        android:layout_marginTop="25dp"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="195dp"
-        android:background="@drawable/bg_edit_text"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="12dp"
-        style="@style/Text"
-        android:hint="@string/nh_p_m_t_kh_u_m_i"
-        android:paddingStart="16dp"
-        android:inputType="textPassword"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        app:passwordToggleEnabled="true">
 
-    <EditText
-        android:id="@+id/edtRePassChange"
+        <EditText
+            android:id="@+id/edtPassChange"
+            style="@style/Text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_edit_text"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="12dp"
+            android:hint="@string/nh_p_m_t_kh_u_m_i"
+            android:inputType="textPassword"
+            android:paddingStart="16dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
-        android:background="@drawable/bg_edit_text"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="12dp"
-        style="@style/Text"
-        android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
-        android:paddingStart="16dp"
-        android:inputType="textPassword"
+        app:hintEnabled="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtPassChange"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
+        app:layout_constraintVertical_bias="0.0"
+        app:passwordToggleEnabled="true">
+
+        <EditText
+            android:id="@+id/edtRePassChange"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_edit_text"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="12dp"
+            android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
+            style="@style/Text"
+            android:inputType="textPassword"
+            android:paddingStart="16dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnLuu"
+        style="@style/Text_btn"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="80dp"
-        android:layout_marginTop="30dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
         android:onClick="onCLickChangepass"
         android:text="@string/l_u"
-        style="@style/Text_btn"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtRePassChange"
-        app:layout_constraintVertical_bias="0.214"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
         tools:ignore="OnClick" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
