--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -64,7 +64,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/tvViewAllCbo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -125,7 +125,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/rcyProductCombo" />
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/tvViewAllNew"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -160,7 +160,7 @@
 
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/tvViewAllHot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
