--- a/app/src/main/res/layout/item_receipt.xml
+++ b/app/src/main/res/layout/item_receipt.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_margin="5dp"
+    android:id="@+id/ctrLayoutReceipt"
     android:background="@drawable/bg_borders_sp">
 
     <TextView
